# C-Programming

./: README.md  equation.c  loops.c  massive.c  massive4.c  perevod.c  picture.c
practice10/: Makefile  main.c  romb.c  romb.h
practice11/: number1.c  number2.c  number3.c  number4.c
practice12/tasks/: task2.txt
practice12/tasks/task0/: Makefile
practice12/tasks/task0/app/: main.c
practice12/tasks/task1/: CMakeLists.txt
practice12/tasks/task1/background/: CMakeLists.txt
practice12/tasks/task1/pipes/: CMakeLists.txt
practice1_2/: main.c
practice2/: farcel  farcel.c  year.c
practice2_2/: main.c
practice3_2/: file1.txt  mergesort.py  sort.c
practice4_2/: main.c  text.txt
practice5/: bitwise.c
practice5_2/: main.c
practice6/: massive4.c
practice6_2/: 3.sh  4.sh  5.sh  5_.sh  CMakeLists.txt
practice6_2/include/: train.h
practice6_2/src/: main.c  main_dyn.c  train_input_output.c  train_search.c
practice7/: strings.c
practice7_2/: graph.py  main.c  readme.md
practice8/: cramer.c
practice8*/: ulitka.c
practice8_2/: main.c  matrix_utils.c  matrix_utils.h  unit_test_c.c
practice9/: dynamic_mem.c
practice9*/: recursion.c
rgz/: CMakeLists.txt
rgz/include/: typing_trainer.h
rgz/src/: main.c  typing_trainer.c  validation.c
rgz/tests/: CMakeLists.txt  test_typing_trainer.c
